feat: add UnitTest

--- a/CopyDllsAfterBuildLocalTools/CopyDllsAfterBuildLocalTools/CopySettings.json
+++ b/CopyDllsAfterBuildLocalTools/CopyDllsAfterBuildLocalTools/CopySettings.json
@@ -1,5 +1,5 @@
 {
-  "destination": "../../project/Assets/Dlls",
+  "destination": "../../../project/Assets/Dlls",
   "pattern": "*",
   "excludes": [ "UnityEngine", "UnityEditor" ],
   "exclude_folders": ["excludes"]
