--- a/CopyDllsAfterBuildLocalTools/CopyDllsAfterBuildLocalToolsUnitTest/CopyDllsAfterBuildLocalToolsUnitTest.csproj
+++ b/CopyDllsAfterBuildLocalTools/CopyDllsAfterBuildLocalToolsUnitTest/CopyDllsAfterBuildLocalToolsUnitTest.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CopyDllsAfterBuildLocalTools\CopyDllsAfterBuildLocalTools.csproj" />
+  </ItemGroup>
+
 </Project>
